--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="backdrop"></div>
 
     <!--begin :: Add Movie Modal-->
-    <div class="modal" id="add-modal">
+    <div class="modal card" id="add-modal">
       <div class="modal__content">
         <label for="title">Movie Title</label>
         <input type="text" name="title" id="title" />
